<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.RankingFragment">

    <LinearLayout
        android:id="@+id/ll_sorting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/indigo_200"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_sorting_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sorted_by"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_1"
                android:textColor="@color/indigo_700"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_most"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_2"
                android:textColor="@color/indigo_700"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_average"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_3"
                android:textColor="@color/indigo_700"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_4"
                android:textColor="@color/indigo_700"
                android:textStyle="bold" />
        </RadioGroup>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_sorting">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyleLargeInverse"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_sorting" />

</androidx.constraintlayout.widget.ConstraintLayout>